feat: migration tkit.org (#9)
* feat: migration tkit.org

* feat: update docker images
